--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -34,23 +34,39 @@
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
     </Reference>
-    <Reference Include="NetMQ">
-      <HintPath>..\packages\NetMQ.4.0.0-rc5\lib\net40\NetMQ.dll</HintPath>
-    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="Nancy">
+      <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
+    </Reference>
+    <Reference Include="Nancy.Hosting.Self">
+      <HintPath>..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BuildQueue.cs" />
+    <Compile Include="BuildServer.cs" />
     <Compile Include="BuildSubmit.cs" />
     <Compile Include="BuildAgentConfig.cs" />
     <Compile Include="DeploymentTarget.cs" />
     <Compile Include="AgentName.cs" />
-    <Compile Include="Net\Bus.cs" />
+    <Compile Include="IReceiver.cs" />
+    <Compile Include="API\AgentModule.cs" />
+    <Compile Include="API\Agent.cs" />
+    <Compile Include="Discovery\UdpDiscoveryClient.cs" />
+    <Compile Include="Discovery\UdpDiscoveryServer.cs" />
+    <Compile Include="Discovery\ServerInfo.cs" />
+    <Compile Include="IBuildQueue.cs" />
+    <Compile Include="API\BuildRequest.cs" />
+    <Compile Include="BuildQueue.cs" />
+    <Compile Include="API\BuildResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SeudoBuild.Core\SeudoBuild.Core.csproj">
@@ -66,7 +82,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Net\" />
+    <Folder Include="API\" />
+    <Folder Include="Discovery\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
