--- a/SeudoBuild.Agent/SeudoBuild.Agent.csproj
+++ b/SeudoBuild.Agent/SeudoBuild.Agent.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,7 +17,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
-      <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0" />
+      <PackageReference Include="Nancy.Hosting.Kestrel" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
