--- a/SeudoCI.Net.Tests/SeudoCI.Net.Tests.csproj
+++ b/SeudoCI.Net.Tests/SeudoCI.Net.Tests.csproj
@@ -11,6 +11,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\SeudoCI.Net\SeudoCI.Net.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
